@@ -4,11 +4,11 @@
 
   :repositories     {"local" ~(str (.toURI (java.io.File. "localjars")))}
 
-  :plugins          [[lein-protobuf-minimal "0.4.4" :hooks false]
+  :plugins          [[lein-protobuf-minimal-mg "0.4.5" :hooks false]
                      [lein-sass "0.4.0"]
                      [codox "0.9.3"]]
 
-  :dependencies     [[org.clojure/clojure                         "1.8.0"]
+  :dependencies     [[org.clojure/clojure                         "1.10.0"]
                      [org.clojure/core.cache                      "0.6.5"]
                      [org.clojure/tools.cli                       "0.3.5"]
                      [org.clojure/tools.macro                     "0.1.5"]
@@ -17,7 +17,7 @@
                      [org.clojure/data.json                       "0.2.6"]
                      [com.cognitect/transit-clj                   "0.8.285"
                       :exclusions [com.fasterxml.jackson.core/jackson-core]] ; transit-clj -> 2.3.2, amazonica -> 2.6.6
-                     [prismatic/schema                            "1.0.4"]
+                     [prismatic/schema                            "1.1.9"]
                      [prismatic/plumbing                          "0.5.2"]
                      [com.google.protobuf/protobuf-java           "2.3.0"]
                      [ch.qos.logback/logback-classic              "1.2.1"]
@@ -55,6 +55,40 @@
                      [com.amazonaws/aws-java-sdk-core             "1.11.63"]
                      [com.amazonaws/aws-java-sdk-s3               "1.11.63"]
 
+                     ;; bob needs javax.xml.bind, and it's removed in jdk 11
+                     [javax.xml.bind/jaxb-api "2.3.0"]
+                     [com.sun.xml.bind/jaxb-core "2.3.0"]
+                     [com.sun.xml.bind/jaxb-impl "2.3.0"]
+
+                     [org.openjfx/javafx-base "12-ea+8"]
+                     [org.openjfx/javafx-base "12-ea+8" :classifier "linux"]
+                     [org.openjfx/javafx-base "12-ea+8" :classifier "mac"]
+                     [org.openjfx/javafx-base "12-ea+8" :classifier "win"]
+                     [org.openjfx/javafx-controls "12-ea+8"]
+                     [org.openjfx/javafx-controls "12-ea+8" :classifier "linux"]
+                     [org.openjfx/javafx-controls "12-ea+8" :classifier "mac"]
+                     [org.openjfx/javafx-controls "12-ea+8" :classifier "win"]
+                     [org.openjfx/javafx-graphics "12-ea+8"]
+                     [org.openjfx/javafx-graphics "12-ea+8" :classifier "linux"]
+                     [org.openjfx/javafx-graphics "12-ea+8" :classifier "mac"]
+                     [org.openjfx/javafx-graphics "12-ea+8" :classifier "win"]
+                     [org.openjfx/javafx-media "12-ea+8"]
+                     [org.openjfx/javafx-media "12-ea+8" :classifier "linux"]
+                     [org.openjfx/javafx-media "12-ea+8" :classifier "mac"]
+                     [org.openjfx/javafx-media "12-ea+8" :classifier "win"]
+                     [org.openjfx/javafx-web "12-ea+8"]
+                     [org.openjfx/javafx-web "12-ea+8" :classifier "linux"]
+                     [org.openjfx/javafx-web "12-ea+8" :classifier "mac"]
+                     [org.openjfx/javafx-web "12-ea+8" :classifier "win"]
+                     [org.openjfx/javafx-fxml "12-ea+8"]
+                     [org.openjfx/javafx-fxml "12-ea+8" :classifier "linux"]
+                     [org.openjfx/javafx-fxml "12-ea+8" :classifier "mac"]
+                     [org.openjfx/javafx-fxml "12-ea+8" :classifier "win"]
+                     [org.openjfx/javafx-swing "12-ea+8"]
+                     [org.openjfx/javafx-swing "12-ea+8" :classifier "linux"]
+                     [org.openjfx/javafx-swing "12-ea+8" :classifier "mac"]
+                     [org.openjfx/javafx-swing "12-ea+8" :classifier "win"]
+
                      [org.jogamp.gluegen/gluegen-rt               "2.3.2"]
                      [org.jogamp.gluegen/gluegen-rt               "2.3.2" :classifier "natives-linux-amd64"]
                      [org.jogamp.gluegen/gluegen-rt               "2.3.2" :classifier "natives-macosx-universal"]
@@ -67,6 +101,8 @@
                      [org.jogamp.jogl/jogl-all                    "2.3.2" :classifier "natives-windows-i586"]]
 
   :source-paths      ["src/clj"]
+
+  :test-paths        ["test"]
 
   :java-source-paths ["src/java"]
 
@@ -98,7 +134,8 @@
                       :output-directory "resources/editor.css"
                       :source-maps false}
 
-  :aliases           {"benchmark"     ["with-profile" "+test" "trampoline" "run" "-m" "benchmark.graph-benchmark"]}
+  :aliases           {"benchmark" ["with-profile" "+test" "trampoline" "run" "-m" "benchmark.graph-benchmark"]
+                      "lint" ["with-profile" "+test" "eastwood"]}
 
   ;; used by `pack` task
   :packing           {:pack-path "resources/_unpack"}
@@ -110,21 +147,30 @@
                       :src-linenum-anchor-prefix "L"
                       :defaults                  {:doc/format :markdown}}
 
-  :jvm-opts          ["-Djna.nosys=true" "-Djava.net.preferIPv4Stack=true"]
-  :main ^:skip-aot   com.defold.editor.Start
+  :jvm-opts          ["-Djna.nosys=true"
+                      "-Djava.net.preferIPv4Stack=true"
+                      "--illegal-access=warn"
+                      ;; hide warnings about illegal reflective access by jogl
+                      "--add-opens=java.base/java.lang=ALL-UNNAMED"
+                      "--add-opens=java.desktop/sun.awt=ALL-UNNAMED"
+                      "--add-opens=java.desktop/sun.java2d.opengl=ALL-UNNAMED"
+                      ;; hide warnings about illegal reflective access by clojure
+                      "--add-opens=java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED"]
+  :main ^:skip-aot   com.defold.editor.Main
 
   :uberjar-exclusions [#"^natives/"]
 
-  :profiles          {:test    {:injections [(defonce force-toolkit-init (javafx.embed.swing.JFXPanel.))]
+  :profiles          {:test    {:injections [(defonce force-toolkit-init (javafx.application.Platform/startup (fn [])))]
                                 :resource-paths ["test/resources"]}
                       :uberjar {:prep-tasks  ^:replace ["clean" "protobuf" ["sass" "once"] "javac" ["run" "-m" "aot"]]
                                 :aot          :all
                                 :omit-source  true
                                 :source-paths ["sidecar"]}
                       :release {:jvm-opts          ["-Ddefold.build=release"]}
-                      :dev     {:dependencies      [[org.clojure/test.check   "0.9.0"]
+                      :dev     {:plugins           [[jonase/eastwood "0.3.5" :exclusions [org.clojure/clojure]]]
+                                :dependencies      [[org.clojure/test.check   "0.9.0"]
                                                     [org.clojure/tools.trace  "0.7.9"]
-                                                    [com.clojure-goes-fast/clj-async-profiler "0.3.0"]
+                                                    [clj-async-profiler-mg "0.4.0"]
                                                     [criterium "0.4.3"]
                                                     [org.mockito/mockito-core "1.10.19"]
                                                     [ring "1.4.0"]]
@@ -143,4 +189,10 @@
                                                     ;; From https://github.com/clojure-goes-fast/clj-async-profiler/blob/master/README.md
                                                     "-Djdk.attach.allowAttachSelf"   ; Required for attach to running process.
                                                     "-XX:+UnlockDiagnosticVMOptions" ; Required for DebugNonSafepoints.
-                                                    "-XX:+DebugNonSafepoints"]}})    ; Without this, there is a high chance that simple inlined methods will not appear in the profile.
+                                                    "-XX:+DebugNonSafepoints"]}}     ; Without this, there is a high chance that simple inlined methods will not appear in the profile.
+  :eastwood {:out "eastwood-warnings.txt"
+             :continue-on-exception true
+             :add-linters [:unused-fn-args
+                           :unused-locals
+                           :unused-namespaces
+                           :unused-private-vars]})
